# swagger.json
@@ -657,6 +657,72 @@
             "$ref": "#/responses/ResponseError"
           }
         }
+      },
+      "patch": {
+        "description": "Allows you to update an existing deck",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "Decks"
+        ],
+        "summary": "Update deck",
+        "operationId": "RequestUpdateDeck",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Game",
+            "name": "game",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Collection",
+            "name": "collection",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Deck",
+            "name": "deck",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "Body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "backside": {
+                  "type": "string",
+                  "x-go-name": "BacksideImage"
+                },
+                "type": {
+                  "type": "string",
+                  "x-go-name": "Type"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/ResponseUpdateDeck"
+          },
+          "default": {
+            "$ref": "#/responses/ResponseError"
+          }
+        }
       }
     },
     "/games/{game}/decks": {
@@ -971,6 +1037,20 @@
           "type": "string"
         },
         "name": {
+          "type": "string"
+        }
+      }
+    },
+    "ResponseUpdateDeck": {
+      "description": "Status of deck update",
+      "headers": {
+        "backside": {
+          "type": "string"
+        },
+        "id": {
+          "type": "string"
+        },
+        "type": {
           "type": "string"
         }
       }
